# autoencodersplz

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
autoencodersplz/backbones/: mlp.py  mlp_mixer.py  resnet.py  vision_transformer.py
autoencodersplz/layers/: dimensions.py  patch_embed.py  vector_quantize.py
autoencodersplz/models/: __init__.py  fsqvae.py  i_jepa.py  mae.py  maemix.py  mlp_ae.py  mlp_residual_ae.py  res_ae.py  residual_ae.py  vision_transformer.py  vqvae.py
autoencodersplz/trainers/: __init__.py  autoencoder.py  basic.py  lightning.py  loaders.py  loggers.py  schedulers.py
tests/: playground.py  test_fsqvae.py  test_ijepa.py  test_lightning.py  test_mae.py  test_maemix.py  test_mlp_ae.py  test_mlp_residual_ae.py  test_residual_ae.py  test_vqvae.py
tests/test_runs_2/: trained_backbone.ResNet.pt  trained_model.ResAE.pt  training_log.tsv
tests/train_linear_residual_ae_deterministic/: trained_backbone.LinearResidualNet.pt  trained_model.LinearResidualAE.pt  training_log.tsv
tests/train_vqvae/: trained_backbone.ResNet.pt  trained_model.VQVAE.pt  training_log.tsv
